# Virtux

./: .gitignore  README.md  pyproject.toml
src/virtux/: __init__.py  __main__.py  cli.py  environment.py  executor.py  filesystem.py  parser.py  permissions.py  plugins.py  registry.py  shell.py  users.py  utils.py
src/virtux/commands/: __init__.py  archive_cmds.py  filesystem_cmds.py  network_cmds.py  process_cmds.py  shell_cmds.py  system_cmds.py  text_cmds.py
src/virtux/core/: __init__.py  environment.py  executor.py  filesystem.py  parser.py  registry.py  shell.py
tests/: test_audit_regressions.py  test_commands.py  test_executor.py  test_filesystem.py  test_parser.py  test_shell.py
